app/globals.css
@import "tailwindcss";

@custom-variant dark (&:where(.dark, .dark *));

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-popover-border: var(--popover-border);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-border: var(--border);
  --color-edge: var(--edge);
  --color-line: var(--line);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-info: var(--info);
  --color-success: var(--success);
  --color-destructive: var(--destructive);
  --color-link: var(--link);
  --color-code: var(--code);
  --color-code-foreground: var(--code-foreground);
  --color-code-number: var(--code-number);
  --color-code-highlight: var(--code-highlight);
  --color-selection: var(--selection);
  --color-selection-foreground: var(--selection-foreground);

  --font-sans: var(--font-plex-sans);
  --font-mono: var(--font-plex-mono);

  --shadow-popover: var(--shadow-popover);
}

@utility no-scrollbar {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */

  /* Hide scrollbar for Chrome, Safari and Opera */
  &::-webkit-scrollbar {
    display: none;
  }
}

@utility link {
  @apply font-medium underline underline-offset-4;
}

@utility screen-line-before {
  @apply relative before:absolute before:top-0 before:-left-[100vw] before:-z-1 before:h-px before:w-[200vw] before:bg-edge;
}

@utility screen-line-after {
  @apply relative after:absolute after:bottom-0 after:-left-[100vw] after:-z-1 after:h-px after:w-[200vw] after:bg-edge;
}

@utility screen-line-top {
  @apply relative before:absolute before:top-0 before:-left-[100vw] before:-z-1 before:h-px before:w-[200vw] before:bg-[var(--line)];
}

@utility screen-line-bottom {
  @apply relative after:absolute after:bottom-0 after:-left-[100vw] after:-z-1 after:h-px after:w-[200vw] after:bg-[var(--line)];
}

@utility step {
  counter-increment: step;
  &::before {
    @apply mr-2 inline-flex size-7 items-center justify-center rounded-full bg-muted text-center -indent-px text-sm font-medium text-muted-foreground md:absolute md:-mt-0.5 md:-ml-11.5 md:size-8;
    content: counter(step);
  }
}

:root {
  --background: lab(100 0 0);

  --foreground: oklch(0.141 0.005 285.823);
  --line: rgba(0, 0, 0, 0.1);
  --muted: rgba(0, 0, 0, 0.05);
  --muted-foreground: rgba(0, 0, 0, 0.6);
}

.dark {
  --background: #000000;
  --foreground: #ffffff;
  --line: rgba(255, 255, 255, 0.15);
  --muted: rgba(255, 255, 255, 0.08);
  --muted-foreground: rgba(255, 255, 255, 0.6);
}

@layer base {
  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    @apply border-border outline-ring/50;
  }

  ::selection {
    @apply bg-selection text-selection-foreground;
  }

  html {
    @apply motion-safe:scroll-smooth;
  }

  body {
    @apply overscroll-y-none bg-background font-sans text-foreground antialiased;
    font-synthesis-weight: none;
    text-rendering: optimizeLegibility;
  }

  /* Custom scrollbar styling. Thanks @shadcn-ui */
  ::-webkit-scrollbar {
    width: 5px;
  }
  ::-webkit-scrollbar-track {
    background: transparent;
  }
  ::-webkit-scrollbar-thumb {
    background: var(--border);
    border-radius: 5px;
  }
  * {
    scrollbar-width: thin;
    scrollbar-color: var(--border) transparent;
  }

  [id] {
    @apply scroll-mt-22;
  }
}

@layer components {
  [data-rehype-pretty-code-figure] {
    @apply relative my-6 rounded-lg bg-code text-code-foreground;

    pre {
      @apply overflow-x-auto px-4 py-4 has-data-line-numbers:px-0;
    }

    code {
      @apply font-mono text-sm;
    }
  }

  [data-line] {
    @apply py-0.5;
  }

  [data-line] span {
    @apply text-(--shiki-light) dark:text-(--shiki-dark);
  }

  [data-rehype-pretty-code-title] {
    @apply flex items-center gap-2 border-b px-4 py-2.5 text-sm text-muted-foreground [&_svg]:size-4 [&_svg]:text-muted-foreground;
  }

  [data-line-numbers] {
    counter-reset: line;
  }

  [data-line-numbers] > [data-line]::before {
    counter-increment: line;
    content: counter(line);
    @apply sticky left-0 inline-block w-16 bg-code pr-6 text-right text-sm text-code-number;
  }

  [data-line-numbers] [data-highlighted-line][data-line]::before {
    @apply bg-code-highlight;
  }

  [data-highlighted-line] {
    @apply bg-code-highlight;
  }
}

@theme inline {
  --animate-cell-ripple: cell-ripple var(--duration, 200ms) ease-out none 1
    var(--delay, 0ms);

  @keyframes cell-ripple {
    0% {
      opacity: 0.4;
    }
    50% {
      opacity: 0.8;
    }
    100% {
      opacity: 0.4;
    }
  }
}

